--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,23 +1,28 @@
-<div class="row flex-center flex">
-    <div class="col-6 form-widget" aria-live="polite">
-      <h1 class="header">Supabase + Angular</h1>
-      <p class="description">Sign in via magic link with your email below</p>
-      <form [formGroup]="signInForm" (ngSubmit)="onSubmit()" class="form-widget">
-        <div>
-          <label for="email">Email</label>
-          <input
-            id="email"
-            formControlName="email"
-            class="inputField"
-            type="email"
-            placeholder="Your email"
-          />
-        </div>
-        <div>
-          <button type="submit" class="button block" [disabled]="loading">
-            {{ loading ? 'Loading' : 'Send magic link' }}
-          </button>
-        </div>
-      </form>
+<div class="flex items-center justify-center h-screen">
+  <div class="bg-gray-900 p-8 rounded-lg shadow-md w-full max-w-md" aria-live="polite">
+    <h1 class="text-3xl font-bold mb-4 text-center ">Supabase + Angular</h1>
+    <p class="text-sm text-gray-200 mb-6 text-center">
+      Sign in via magic link with your email below
+    </p>
+    <form [formGroup]="signInForm" (ngSubmit)="onSubmit()" class="space-y-4">
+      <div class="flex flex-col gap-2">
+        <label for="email" class="block text-sm font-medium text-gray-200"
+          >Email</label
+        >
+        <input
+          pInputText 
+          id="email"
+          formControlName="email"
+          class="w-full"
+          type="email"
+          placeholder="Your email"
+        />
+      </div>
+      <div>
+        <p-button styleClass='w-full' [label]="loading ? 'Loading' : 'Send magic link'"  type="submit" [loading]="loading" />
+
+      
+      </div>
+    </form>
     </div>
   </div>
